--- a/index.html
+++ b/index.html
@@ -1931,6 +1931,7 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
 
     // Format books for email
     // Format books as table rows for email
+// Format books as table rows for email
     const formattedBooks = books.map((book, index) => 
         `<tr>
             <td>${index + 1}</td>
@@ -1954,7 +1955,7 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
                 reply_to: email,
                 tessera: tessera || 'Non specificata',
                 telefono: telefono || 'Non specificato',
-                books: formattedBooks,
+                books_table: formattedBooks,
                 notes: document.getElementById('notes').value.trim() || 'Nessuna nota aggiuntiva'
             },
             config.emailjs.publicKey
