--- a/index.html
+++ b/index.html
@@ -1929,13 +1929,13 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
         books.push(book);
     });
 
-    // Format books for email
+    
     // Format books as table rows for email
-// Format books as table rows for email
     const formattedBooks = books.map((book, index) => 
         `<tr>
             <td>${index + 1}</td>
-            <td>${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}</td>
+            <td>${book.title}</td>
+            <td>${book.author}</td>
             <td>${book.publisher}</td>
             <td>${book.year}</td>
             <td>${book.isbn}</td>
