--- a/index.html
+++ b/index.html
@@ -1931,6 +1931,7 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
 
     
     // Format books as table rows for email
+// Format books as table rows for email
     const formattedBooks = books.map((book, index) => 
         `<tr>
             <td>${index + 1}</td>
@@ -1941,6 +1942,15 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
             <td>${book.isbn}</td>
         </tr>`
     ).join('');
+
+    // Create plain text versions for easy copying
+    const titlesOnly = books.map(book => book.title).join('\n');
+    const authorsOnly = books.map(book => book.author).join('\n');
+    const publishersOnly = books.map(book => book.publisher).join('\n');
+    const yearsOnly = books.map(book => book.year).join('\n');
+    const isbnsOnly = books.map(book => book.isbn).join('\n');
+
+	
 
     showLoadingOverlay();
 
@@ -1956,6 +1966,11 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
                 tessera: tessera || 'Non specificata',
                 telefono: telefono || 'Non specificato',
                 books_table: formattedBooks,
+                titles_text: titlesOnly,
+                authors_text: authorsOnly,
+                publishers_text: publishersOnly,
+                years_text: yearsOnly,
+                isbns_text: isbnsOnly,
                 notes: document.getElementById('notes').value.trim() || 'Nessuna nota aggiuntiva'
             },
             config.emailjs.publicKey
