--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             line-height: 1.6;
             color: #334155;
+            overflow-x: hidden;
+        }
+        
+        html {
+            overflow-x: hidden;
         }
 
         /* Utility classes - sostituiscono Tailwind */
