--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
             line-height: 1.6;
             color: #334155;
             overflow-x: hidden;
+            width: 100%;
+            max-width: 100vw;
         }
         
         html {
             overflow-x: hidden;
+            width: 100%;
+            max-width: 100vw;
         }
 
         /* Utility classes - sostituiscono Tailwind */
@@ -366,6 +370,7 @@
             padding: 0 1rem;
             position: relative;
             margin-top: 60px;
+            box-sizing: border-box;
         }
 
         .nav-icons {
@@ -592,6 +597,10 @@
                 padding: 1rem 0;
             }
 
+            .container-header {
+                padding: 0 0.5rem;
+            }
+
             .container-header img[src="logomorante.png"] {
                 display: none;
             }
@@ -601,12 +610,16 @@
             }
 
             .top-banner {
-                padding: 0.4rem 1rem;
+                padding: 0.4rem 0.5rem;
                 min-height: 40px;
             }
 
             .roma-logo {
                 height: 30px;
+            }
+
+            .social-icons {
+                gap: 0.5rem;
             }
 
             .social-icons a {
@@ -619,17 +632,23 @@
                 top: 0;
                 transform: none;
                 justify-content: flex-start;
-                padding: 0.75rem 1rem;
+                padding: 0.75rem 0.5rem;
                 margin-bottom: -0.5rem;
             }
 
             .content-wrapper {
-                margin-top: -0.25rem;
+                margin-top: 0;
                 padding: 0 0.5rem;
+                width: 100%;
+            }
+
+            footer {
+                padding: 2rem 0.5rem;
             }
 
             footer .container {
                 text-align: center;
+                padding: 0 0.5rem;
             }
 
             .flex-col {
@@ -637,12 +656,23 @@
             }
 
             .px-4 {
-                padding-left: 1rem;
-                padding-right: 1rem;
+                padding-left: 0.5rem !important;
+                padding-right: 0.5rem !important;
             }
 
             .max-w-4xl {
-                padding: 1rem;
+                padding: 1rem 0.5rem !important;
+                width: 100%;
+            }
+
+            .bg-blue-50 {
+                margin-left: 0.5rem;
+                margin-right: 0.5rem;
+                width: calc(100% - 1rem);
+            }
+
+            form {
+                padding: 0 0.5rem;
             }
         }
 
@@ -740,8 +770,8 @@
         </div>
 
         <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg mt-2">
-            <div style="display: flex; flex-direction: column; margin-bottom: 2.5rem; text-align: left; gap: 0.5rem; padding: 0 1rem;">
-                <div class="flex items-center gap-2">
+            <div style="display: flex; flex-direction: column; margin-bottom: 2.5rem; text-align: left; padding: 0 1rem;">
+                <div class="flex items-center gap-2" style="margin-bottom: 0.75rem;">
                     <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" title="Visualizza la posizione sulla mappa">
                         <img alt="Posizione" src="location.svg" class="location-icon" style="height: 20px; width: 20px;">
                     </a>
@@ -802,11 +832,11 @@
                     <label for="notes" class="block text-slate-700 font-medium text-sm">Note aggiuntive</label>
                     <span id="charCount" class="text-sm text-gray-500">500 caratteri rimanenti</span>
                 </div>
-                <textarea id="notes" name="notes" rows="3" maxlength="500" class="w-full px-3 py-2 border-2 border-gray-300 rounded text-base bg-white" style="resize: vertical; min-height: 75px;" placeholder="Aggiungi eventuali note o commenti sulla donazione..."></textarea>
+                <textarea id="notes" name="notes" rows="3" maxlength="500" class="w-full px-3 py-2 border-2 border-gray-300 rounded text-base bg-white" style="resize: vertical; min-height: 75px; font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;" placeholder="Aggiungi eventuali note o commenti sulla donazione..."></textarea>
             </div>
 
             <div class="bg-gray-50 p-4 rounded mb-5">
-                <label class="flex items-start gap-3" style="cursor: pointer;">
+                <label class="flex items-start gap-3" style="cursor: pointer; font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; font-size: 1rem; font-weight: 400; color: #334155;">
                     <input type="checkbox" id="accept" name="accept" required style="margin-top: 4px;">
                     <span>Ho letto e accetto <a href="termini.html" target="_blank" class="text-blue-500" style="text-decoration: underline;">termini e condizioni</a></span>
                 </label>
