--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                     <div class="flex items-center gap-2">
                         <i class="fas fa-clock w-4"></i>
                         <span class="flex flex-col">
-                            <span>Lunedì-Venerdì 09:00-18:30</span>
-                            <span>Sabato 09:00-13:00</span>
+                            <span>Lun-Ven 09:00-19:00</span>
+                            <span>Sab 09:00-13:00</span>
                         </span>
                     </div>
                 </div>
