--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-6 rounded-r">
-            Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con <span class="required-asterisk">*</span> sono obbligatori. È raccomandato compilare anche il campo ISBN per garantire una più accurata identificazione dei volumi.
+            Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con <span class="required-asterisk">*</span> sono obbligatori.
         </div>
 
         <form id="donationForm" novalidate>
