--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <label class="flex items-center gap-2">
                         <i class="fas fa-book-open text-lg text-blue-600"></i>
                         <span class="text-blue-600 font-medium">
-                            Search & click <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
+                            Search as yoy type <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
                         </span>
                         <span class="group relative cursor-help">
                             <i class="fas fa-info-circle text-gray-500"></i>
