--- a/raccolta.html
+++ b/raccolta.html
@@ -677,8 +677,11 @@ footer a.no-underline:hover {
             <div class="flex items-center justify-center md:justify-start space-x-4">
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-phone w-4"></i>
-                    <span>06 4546 0481 / 0483</span>
-                </div>
+                        <span class="flex flex-col">
+                            <span>06 4546 0481</span>
+                            <span>/ 0483</span>
+                        </span>
+                    </div>
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-clock w-4"></i>
                     <span class="flex flex-col">
