--- a/raccolta.html
+++ b/raccolta.html
@@ -677,8 +677,11 @@ footer a.no-underline:hover {
                 <div class="flex items-center justify-center md:justify-start space-x-2">
                     <i class="fas fa-phone w-4"></i>
                     <span class="flex flex-col">
-                        <span>06 4546 0481</span>
-                        <span>/ 0483</span>
+                        <span>
+                            <a href="tel:+390645460481">06 4546 0481</a> / 
+                            <a href="tel:+390645460483">0483</a>
+                        </span>
+
                     </span>
                 </div>
                 <div class="flex items-center justify-center md:justify-start space-x-2">
