--- a/raccolta.html
+++ b/raccolta.html
@@ -677,10 +677,8 @@ footer a.no-underline:hover {
                 <div class="flex items-center justify-center md:justify-start space-x-2">
                     <i class="fas fa-phone w-4"></i>
                     <span class="flex flex-col">
-                        <span>
-                            <a href="tel:+390645460481">06 4546 0481</a> / 
-                            <a href="tel:+390645460483">0483</a>
-                        </span>
+                        <span>06 4546 0481 / 0483</span>
+
 
                     </span>
                 </div>
