--- a/raccolta.html
+++ b/raccolta.html
@@ -31,4 +31,130 @@
 <!-- Header -->
 <header>
     <div class="container-header">
-        <a href="https://www.bibliotechediroma.it/opac
+        <a href="https://www.bibliotechediroma.it/opac/.do">
+            <img src="logobianco.png" alt="Logo Biblioteche di Roma" class="logo logo--white">
+        </a>
+        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2">
+            <img src="logomorante.png" alt="Logo Biblioteca Morante" class="logo logo--morante">
+        </a>
+    </div>
+</header>
+
+<!-- Content -->
+<div class="content-wrapper">
+    <div class="nav-icons">
+        <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Indietro">
+            <img src="left.svg" alt="Indietro" class="icon-nav">
+        </a>
+        <a href="https://www.bibliotechediroma.it/opac/.do" title="Home">
+            <img src="home.svg" alt="Home" class="icon-nav">
+        </a>
+    </div>
+
+    <div class="container-fluid mx-auto px-4 content-section">
+        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <div class="flex items-center mb-4">
+                <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" title="Visualizza la posizione sulla mappa">
+                    <img src="location.svg" alt="Posizione" class="location-icon">
+                </a>
+                <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+                   class="biblioteca-link" 
+                   title="Clicca qui per vedere gli appuntamenti della biblioteca">
+                   Biblioteca Elsa Morante
+                </a>
+            </div>
+            <h1 class="text-3xl font-bold">Centri di Raccolta per Donazione Libri e Audiovisivi</h1>
+        </div>
+
+        <!-- Associazione Clemente Riva -->
+        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <h2 class="text-2xl font-semibold mb-4">Associazione Culturale Clemente Riva</h2>
+            <p class="mb-2"><strong>Ubicazione:</strong> Ostia, viale Ammiraglio Del Bono, 46</p>
+            <p>
+                <strong>Contatti:</strong> <a href="https://associazioneclementeriva.wordpress.com" target="_blank">Sito Web</a><br>
+                <span><strong>Telefono:</strong> 3205353933 | <strong>Email:</strong> assclementeriva@gmail.com</span>
+            </p>
+        </div>
+
+        <!-- Cooperativa Assistenza e Territorio -->
+        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <h2 class="text-2xl font-semibold mb-4">Cooperativa Assistenza e Territorio</h2>
+            <p><strong>Contatti:</strong> <a href="https://www.assistenza-territorio.it/contatti/" target="_blank">Sito Web</a></p>
+            <p><strong>Email:</strong> info@assistenza-territorio.it</p>
+        </div>
+
+        <!-- Gruppo Facebook -->
+        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <h2 class="text-2xl font-semibold mb-4">Gruppo Facebook "La cultura non è spazzatura"</h2>
+            <p class="mb-2">Scopo: Salvare libri dalla spazzatura</p>
+            <p><strong>Gruppo:</strong> <a href="https://www.facebook.com/groups/2486179871416075" target="_blank">Pagina Facebook</a></p>
+        </div>
+
+        <!-- Chiesa San Carlo -->
+        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <h2 class="text-2xl font-semibold mb-4">Centro di Raccolta Chiesa San Carlo da Sezze</h2>
+            <p class="mb-2"><strong>Ubicazione:</strong> Acilia, via Macchia Saponara</p>
+            <p><strong>Contatti:</strong> <a href="https://sancarlods.it/pages/index.php" target="_blank">Sito Web</a><br>
+               <strong>Telefono:</strong> 06-52.12.470</p>
+        </div>
+
+        <!-- Centro Sociale Polivalente -->
+        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <h2 class="text-2xl font-semibold mb-4">Centro Sociale Polivalente e Biblioteca</h2>
+            <p class="mb-2"><strong>Ubicazione:</strong> Casal Palocco, Viale Gorgia di Leontini, 171</p>
+            <p><strong>Contatti:</strong> <a href="https://www.csp-palocco.it/chi-siamo/chi-siamo" target="_blank">Sito Web</a><br>
+               <strong>Email:</strong> info@csp-palocco.it</p>
+        </div>
+
+        <!-- Bookcrossing -->
+        <div class="bg-white shadow-md rounded-lg p-6">
+            <h2 class="text-2xl font-semibold mb-4">Punti di Bookcrossing</h2>
+            <ul class="list-disc list-inside">
+                <li>Mercato di via dell'Appagliatore</li>
+                <li>Mercato di Fiamme Gialle</li>
+                <li>Via Oletta, angolo Viale della Vittoria</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer>
+    <div class="container footer-container">
+        <div class="mb-4">
+            <img src="footermorante.png" alt="Logo Biblioteca Morante" class="footer-logo" 
+                 onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
+        </div>
+        <div class="footer-info">
+            <div class="flex items-center gap-2">
+                <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" class="footer-link">
+                    <i class="fas fa-location-dot w-4"></i>
+                    <span class="flex flex-col">
+                        <span>Via Adolfo Cozza 7</span>
+                        <span>Municipio X, 00121 Roma</span>
+                    </span>
+                </a>
+            </div>
+            <div class="flex items-center gap-4">
+                <div class="flex items-center gap-2">
+                    <i class="fas fa-phone w-4"></i>
+                    <span>06 4546 048
+                                        <div class="flex items-center gap-2">
+                    <i class="fas fa-phone w-4"></i>
+                    <span>06 4546 0481 / 0483</span>
+                </div>
+
+                <div class="flex items-center gap-2">
+                    <i class="fas fa-clock w-4"></i>
+                    <span class="flex flex-col">
+                        <span>Lunedì-Venerdì 09:00-18:30</span>
+                        <span>Sabato 09:00-13:00</span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+</body>
+</html>
